# minty

./: Cargo.toml  cache.db
minty/Minty.xcodeproj/: project.pbxproj
minty/Minty.xcodeproj/project.xcworkspace/xcuserdata/ellamae.xcuserdatad/: UserInterfaceState.xcuserstate
minty/Minty.xcodeproj/xcshareddata/xcschemes/: minty.xcscheme
minty/Minty.xcodeproj/xcuserdata/ellamae.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: components.rs  lib.rs  pages.rs  plugin.rs  service.rs  state.rs
src/pages/: confirm.rs  deposit.rs  details.rs  home.rs  prediction.rs  qr_code.rs  redeposit.rs  select.rs  similar.rs  success.rs  terms.rs  view.rs
src/pages/old/: expected.rs  insured.rs  p.rs
