[package]
name = "minty"
version = "0.1.0"
edition = "2021"
description = "nOrange"
license = "BSD-3-Clause"
repository = "https://github.com/EllaCouch20/minty.git"
authors = ["Ella Couch <ella@orange.me>"]


[dependencies]
pelican_ui = "1.1.4"
pelican_ui_std = "0.2.5"
profiles = "0.1.3"
bitcoin = {package = "ramp-bitcoin", version = "0.1.3"}
messages = {package = "ramp-messages", version = "0.2.2"}
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
#maverick_os = "0.1.1"
include_dir = "0.7.4"
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "time", "net"] }

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
#crate-type=["cdylib"]

####################
# cargo apk config #
####################


[package.metadata.android]
package = "com.orange.pkg"
build_targets = [ "aarch64-linux-android" ]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.sdk]
min_sdk_version = 33
target_sdk_version = 33

label = "Application Name"

[package.metadata.deb]
maintainer-scripts = "debian/"
